modified get all transaction method